testdata/baselines/reference/submodule/compiler/es6ImportWithoutFromClause.errors.txt
es6ImportWithoutFromClause_1.ts(1,8): error TS2307: Cannot find module 'es6ImportWithoutFromClause_0' or its corresponding type declarations.


==== es6ImportWithoutFromClause_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportWithoutFromClause_1.ts (1 errors) ====
    import "es6ImportWithoutFromClause_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportWithoutFromClause_0' or its corresponding type declarations.
    